[gd_scene load_steps=12 format=2]

[ext_resource path="res://script/Pause.gd" type="Script" id=1]
[ext_resource path="res://Ressources/fonts/Commander Edge.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://img/Apple.png" type="Texture" id=3]
[ext_resource path="res://img/heart.png" type="Texture" id=4]
[ext_resource path="res://img/flower.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 100
outline_size = 2
outline_color = Color( 0.341176, 0.643137, 0.317647, 1 )
use_mipmaps = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 25
outline_size = 1
outline_color = Color( 0.486275, 0.278431, 0.101961, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 25
outline_size = 1
outline_color = Color( 0.52549, 0.0705882, 0.0705882, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 25
outline_size = 1
outline_color = Color( 0.52549, 0.0705882, 0.0705882, 1 )
font_data = ExtResource( 2 )

[node name="Pause" type="Control"]
pause_mode = 2
margin_right = 1027.0
margin_bottom = 602.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackLayer" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradesList" type="ItemList" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0
select_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tree" type="Tabs" parent="ShopContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Tile" type="Panel" parent="ShopContainer/Tree"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -420.5
margin_top = -192.0
margin_right = 420.5
margin_bottom = 194.0
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="NinePatchRect" parent="ShopContainer/Tree/Tile"]
anchor_left = 0.163
anchor_right = 0.341
anchor_bottom = 0.332
margin_left = -1.08301
margin_right = 0.218994
margin_bottom = 10.848
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="ShopContainer/Tree/Tile/Name"]
anchor_left = -0.679
anchor_top = 0.187
anchor_right = -0.046
anchor_bottom = 0.871
margin_left = 0.0124054
margin_top = 0.0149918
margin_right = 0.0623999
margin_bottom = -0.0610428
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="ShopContainer/Tree/Tile/Name"]
anchor_left = 0.064
anchor_top = 0.187
anchor_right = 1.788
anchor_bottom = 0.928
margin_left = 0.335999
margin_top = 0.00699997
margin_right = 0.0119934
margin_bottom = 0.00799561
custom_fonts/normal_font = SubResource( 3 )
text = "APPLE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="NinePatchRect" parent="ShopContainer/Tree/Tile"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -367.5
margin_top = -245.0
margin_right = 367.5
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fertile" type="NinePatchRect" parent="ShopContainer/Tree/Tile/Stats"]
anchor_left = 0.127
anchor_right = 0.171
anchor_bottom = 0.14
margin_left = -0.345001
margin_right = 0.314995
margin_bottom = 0.0999985
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Multiplier" type="Label" parent="ShopContainer/Tree/Tile/Stats/Fertile"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 43.438
margin_right = 43.438
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "x1.02"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ShopContainer/Tree/Tile/Stats/Fertile"]
anchor_left = -2.702
anchor_right = -0.602
anchor_bottom = 1.0
margin_left = 0.0147705
margin_right = 0.0147705
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "FERTILE:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="ShopContainer/Tree/Tile"]
anchor_left = 0.61
anchor_top = 0.085
anchor_right = 0.899
anchor_bottom = 0.684
margin_left = -0.0100098
margin_top = 0.189999
margin_right = 6.94098
margin_bottom = -0.0240173

[node name="Heart" type="NinePatchRect" parent="ShopContainer/Tree/Tile/NinePatchRect"]
anchor_left = 0.051
anchor_top = 0.061
anchor_right = 0.178
anchor_bottom = 0.195
margin_left = -0.291
margin_top = 0.908999
margin_right = -0.898003
margin_bottom = -0.045002
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="ShopContainer/Tree/Tile/NinePatchRect/Heart"]
anchor_left = 1.3
anchor_top = 0.171
anchor_right = 6.117
anchor_bottom = 1.0
margin_left = 0.499996
margin_top = 0.0149999
margin_right = -20.655
margin_bottom = -3.38
custom_fonts/font = SubResource( 5 )
text = "Reproduction:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReproductionChance" type="Label" parent="ShopContainer/Tree/Tile/NinePatchRect/Heart"]
anchor_left = 6.232
anchor_top = 0.233
anchor_right = 7.514
anchor_bottom = 1.067
margin_left = -0.0831757
margin_top = 0.00999975
margin_right = -0.00849915
margin_bottom = -0.0100021
custom_fonts/font = SubResource( 6 )
text = "1%"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Flower" type="NinePatchRect" parent="ShopContainer/Tree/Tile/NinePatchRect"]
anchor_left = 0.051
anchor_top = 0.061
anchor_right = 0.178
anchor_bottom = 0.195
margin_left = -0.291
margin_top = 54.7098
margin_right = -0.898003
margin_bottom = 53.7558
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ShopContainer/Tree/Tile/NinePatchRect/Flower"]
anchor_left = 1.3
anchor_top = 0.171
anchor_right = 6.117
anchor_bottom = 1.0
margin_left = 0.499996
margin_top = 0.0149999
margin_right = -20.655
margin_bottom = -3.38
custom_fonts/font = SubResource( 5 )
text = "Max Flowers:"

[node name="MaxFlower" type="Label" parent="ShopContainer/Tree/Tile/NinePatchRect/Flower"]
anchor_left = 6.23
anchor_top = 0.22
anchor_right = 7.528
anchor_bottom = 1.067
margin_left = -0.015213
margin_top = 0.00314903
margin_right = 0.0093689
margin_bottom = -0.406853
custom_fonts/font = SubResource( 6 )
text = "120"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ShopContainer/Tree"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -8.0
margin_bottom = -36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FruitsUpgrade" type="Tabs" parent="ShopContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="RichTextLabel" type="RichTextLabel" parent="ShopContainer/FruitsUpgrade"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopControl" type="Node2D" parent="ShopContainer/FruitsUpgrade/RichTextLabel"]

[node name="Panel" type="Panel" parent="ShopContainer/FruitsUpgrade/RichTextLabel/ShopControl"]
margin_left = 74.1624
margin_top = 33.9028
margin_right = 227.162
margin_bottom = 186.903
rect_pivot_offset = Vector2( 188.675, 266.156 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fertile" type="Button" parent="ShopContainer/FruitsUpgrade/RichTextLabel/ShopControl/Panel" groups=[
"shop_buy_button",
]]
margin_left = 40.0
margin_top = 80.0
margin_right = 120.0
margin_bottom = 130.0
text = "BUY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="ShopContainer/FruitsUpgrade/RichTextLabel/ShopControl/Panel"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Panel2" type="Panel" parent="ShopContainer/FruitsUpgrade/RichTextLabel/ShopControl"]
margin_left = 256.851
margin_top = 33.9028
margin_right = 409.851
margin_bottom = 186.903
rect_pivot_offset = Vector2( 188.675, 266.156 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upgrade2" type="Button" parent="ShopContainer/FruitsUpgrade/RichTextLabel/ShopControl/Panel2" groups=[
"shop_buy_button",
]]
margin_left = 40.0
margin_top = 80.0
margin_right = 120.0
margin_bottom = 130.0
text = "BUY"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ShopContainer/FruitsUpgrade/RichTextLabel/ShopControl/Panel/Fertile" to="ShopContainer" method="_on_Button_pressed"]
[connection signal="pressed" from="ShopContainer/FruitsUpgrade/RichTextLabel/ShopControl/Panel2/Upgrade2" to="ShopContainer" method="_on_Button_pressed"]
